--- a/templates/card_colecoes.html
+++ b/templates/card_colecoes.html
@@ -1,6 +1,7 @@
 {% load static %}
 {% load mathfilters %}
-
+<h2>{{colecao.nome}}</h2>
+<br>
 {% for roupa in roupas %}
 <div class="c-card-colection">
     <img src="{{roupa.foto.url}}" alt="">
