--- a/templates/base.html
+++ b/templates/base.html
@@ -11,5 +11,6 @@
     </head>
 <body>
     {% block content %}{% endblock content %}
+    {% block scripts %}{% endblock scripts %}
 </body>
 </html>
