--- a/templates/header.html
+++ b/templates/header.html
@@ -6,8 +6,8 @@
         <ul class="menu">
             <li><a href="{% url 'home'%}" id="home" class="">Home</a></li>
             <li><a href="{% url 'lojas_cadastradas' %}" id="lojas" class="">Lojas Cadastradas</a></li>
-            <li><a href="{% url 'em_breve' %}" class="">Coleções em Alta</a></li>
-            <li><a href="{% url 'em_breve' %}" class="">Contato</a></li>
+            {% comment %} <li><a href="{% url 'em_breve' %}" class="">Coleções em Alta</a></li>
+            <li><a href="{% url 'em_breve' %}" class="">Contato</a></li> {% endcomment %}
         </ul>
     </nav>
 
