--- a/pages/templates/pesquisa.html
+++ b/pages/templates/pesquisa.html
@@ -20,58 +20,67 @@
                     <div class="c-pesquisa-filtro">
                         <h5>Parte Superior</h5>
                         <hr>
-                        <a href="">
-                            <p> > Camiseta</p>
-                        </a><a href="pesquisaFilter.html">
-                            <p> > Blusinha</p>
-                        </a><a href="">
-                            <p> > Camisa</p>
-                        </a><a href="">
-                            <p> > Suéter</p>
-                        </a><a href="pesquisaFilter.html">
-                            <p> > Cardigan</p>
-                        </a><a href="">
-                            <p> > Blazer</p>
-                        </a><a href="pesquisaFilter.html">
-                            <p> > Jaqueta</p>
-                        </a><a href="pesquisaFilter.html">
-                            <p> > Casaco</p>
-                        </a><a href="pesquisaFilter.html">
-                            <p> > Colete</p>
-                        </a><a href="pesquisaFilter.html">
-                            <p> > Regata</p>
+                        <a href="javascript:undefined" id="link-product">
+                            <p id="product-name"> > Camiseta</p>
+                        </a>
+                        <a href="javascript:undefined" id="link-product">
+                            <p id="product-name"> > Blusinha</p>
+                        </a>
+                        <a href="javascript:undefined" id="link-product">
+                            <p id="product-name"> > Camisa</p>
+                        </a>
+                        <a href="javascript:undefined" id="link-product">
+                            <p id="product-name"> > Suéter</p>
+                        </a>
+                        <a href="javascript:undefined" id="link-product">
+                            <p id="product-name"> > Cardigan</p>
+                        </a>
+                        <a href="javascript:undefined" id="link-product">
+                            <p id="product-name"> > Blazer</p>
+                        </a>
+                        <a href="javascript:undefined" id="link-product">
+                            <p id="product-name"> > Jaqueta</p>
+                        </a>
+                        <a href="javascript:undefined" id="link-product">
+                            <p id="product-name"> > Casaco</p>
+                        </a>
+                        <a href="javascript:undefined" id="link-product">
+                            <p id="product-name"> > Colete</p>
+                        </a>
+                        <a href="javascript:undefined" id="link-product">
+                            <p id="product-name"> > Regata</p>
                         </a>
 
                         <br>
 
                         <h5>Parte Inferior</h5>
                         <hr>
-                        <a href="pesquisaFilter.html">
-                            <p> > Short</p>
-                        </a><a href="">
-                            <p> > Bermuda</p>
-                        </a><a href="">
-                            <p> > Calça</p>
-                        </a><a href="pesquisaFilter.html">
-                            <p> > Vestido</p>
-                        </a><a href="pesquisaFilter.html">
-                            <p> > Saia</p>
+                        <a href="javascript:undefined" id="link-product">
+                            <p id="product-name"> > Short</p>
+                        </a><a href="javascript:undefined" id="link-product">
+                            <p id="product-name"> > Bermuda</p>
+                        </a><a href="javascript:undefined" id="link-product">
+                            <p id="product-name"> > Calça</p>
+                        </a><a href="javascript:undefined" id="link-product">
+                            <p id="product-name"> > Vestido</p>
+                        </a><a href="javascript:undefined" id="link-product">
+                            <p id="product-name"> > Saia</p>
                         </a>
 
                         <br>
 
                         <h5>Acessórios</h5>
                         <hr>
-                        <a href="pesquisaFilter.html">
-                            <p> > Meia-calça</p>
-                        </a><a href="pesquisaFilter.html">
-                            <p> > Cachecól</p>
-                        </a><a href="">
-                            <p> > Sapatos</p>
-                        </a><a href="pesquisaFilter.html">
-                            <p> > Meias</p>
-                        </a><a href="pesquisaFilter.html">
-                            <p> > Bolsas</p>
+                        <a href="javascript:undefined" id="link-product">
+                            <p id="product-name"> > Meia-calça</p>
+                        </a><a href="javascript:undefined" id="link-product">
+                            <p id="product-name"> > Cachecól</p>
+                        </a><a href="javascript:undefined" id="link-product">
+                            <p id="product-name"> > Sapatos</p>
+                        </a><a href="javascript:undefined" id="link-product">
+                            <p id="product-name"> > Meias</p>
+                        </a><a href="javascript:undefined" id="link-product">
+                            <p id="product-name"> > Bolsas</p>
                         </a>
                     </div>
                 </div>
@@ -79,6 +88,9 @@
                     <div class="row">
                         <div class="col-12">
                             <div class="h2">Principais peças relacionadas</div>
+                            {% if nenhum__produto_encontrado %}
+                                <p>{{ nenhum__produto_encontrado }}</p>
+                            {% endif %}
                             <br>
                         </div>
                     </div>
@@ -103,13 +115,20 @@
                     <div class="row">
                         <div class="col-12">
                             <div class="h2">Principais lojas relacionadas</div>
+                            {% if nenhuma_loja_encontrada %}
+                                <p>{{ nenhuma_loja_encontrada }}</p>
+                            {% endif %}
                             <br>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-12">
                             <div class="l-lojas-ropa-box">
-
+                                {% if request.user.is_authenticated %}
+                                <a href="{% url 'meus_pacotes' request.user.pk %}">e</a>
+                                {% else %}
+                                <a href="{% url 'meus_pacotes' request.session.usuario %}">e</a>
+                                {% endif %}
                                 {% for resultado in resultados_lojas %}
                                     <div class="c-lojas-ropa-card">
                                         <div class="row">
@@ -134,19 +153,19 @@
         </div>
     </section>
 
-
     {% footer %}
-
-    <script src="script/js.js"></script>
-
-
+    
+    {% endblock content %}
+    {% block scripts %}
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin="anonymous"></script>
+    integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+    crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-        crossorigin="anonymous"></script>
-{% endblock content %}
+    integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+    crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js" integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="{% static 'script/Search.js' %}"></script>
+{% endblock scripts %}
