--- a/templates/header.html
+++ b/templates/header.html
@@ -23,7 +23,11 @@
             </div>
             <!--carrinho-->
             <div class="col-2">
-                <a href="{% url 'meus_pacotes' %}">
+                {% if request.user.is_authenticated %}
+                <a href="{% url 'meus_pacotes' request.user.pk %}">
+                {% else %}
+                <a href="{% url 'meus_pacotes' request.session.usuario %}">
+                {% endif %}
                     <img src="{% static 'imagens/carrinho.png' %}" style="min-width: 30px; width: 30px; height: 30px; min-height: 30px; margin-top: 35px;" alt="">
                 </a>
             </div>
